학생 사인, 총평 자동으로 편하게 적는 연번 시스템 완료